# Done-Today

./: .gitignore  .prettierrc.json  06-CODEX-MASTER-PROMPT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: 00-PROJECT-OVERVIEW.md  01-PRODUCT-REQUIREMENTS.md  02-TECHNICAL-DESIGN.md  03-DATABASE-DESIGN.md  04-UI-DESIGN.md  05-ROADMAP.md  06-THEME-CUSTOMIZATION.md  07-WORK-CATEGORIES.md  08-BACKUP-RESTORE.md  16-DESIGN-SYSTEM.md  17-DAY-THEME-AND-PERSONALIZATION.md  18-INTERNATIONALIZATION-AND-LOCALIZATION.md
docs/audits/: I18N-STRING-INVENTORY.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  003_work_categories.sql  004_backup_receipts.sql
src-tauri/src/: backup.rs  lib.rs  main.rs
src/app/: App.tsx
src/application/backup/: backupService.test.ts  backupService.ts
src/application/journal/: getDailyLog.ts  journalService.ts  saveCoordinator.test.ts  saveCoordinator.ts
src/application/theme/: themeSaveCoordinator.test.ts  themeSaveCoordinator.ts
src/domain/backup/: canonical.test.ts  canonical.ts  models.ts  preview.ts
src/domain/journal/: categories.test.ts  categories.ts  models.ts  repository.ts  statistics.test.ts  statistics.ts
src/domain/theme/: applyTheme.ts  colors.ts  models.ts  presets.ts  repository.ts  theme.test.ts
src/features/backup/: BackupSettings.tsx
src/features/daily-log/: rowActionMenu.test.ts  rowActionMenu.ts
src/shared/: date.test.ts  date.ts
(+11 files in other folders)
