[package]
name = "done-today"
version = "0.1.0"
description = "A calm local-first daily work journal"
authors = ["Done Today"]
edition = "2021"

[lib]
name = "done_today_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tempfile = "3"
